--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,7 @@
 	--font-size-default: 16px;
 	--font-size-caption-1: 13px;
 	--font-size-caption-2: 11px;
+	--font-size-subheader-1: 19px;
 
 	--font-weight-h2: 700;
 	--font-weight-default: 400;
