--- a/src/index.css
+++ b/src/index.css
@@ -64,7 +64,7 @@
 	--color-gray-30: #404552; /* dark */
 	--color-gray-50: #565c6b; /* dark */
 	--color-gray-80: #8990a3; /* dark */
-	--color-bg-95: #404552; /* dark */
+	--color-bg-95: #26282b; /* dark */
 	--color-bg-100: #353941; /* dark */
 	--color-brand-primary-50: #557afa; /*dark */
 	--color-brand-primary-70: #99aef8;
