change dark theme variables

--- a/src/index.css
+++ b/src/index.css
@@ -68,9 +68,9 @@
 	/* dark */
 	--color-gray-80: #8990a3;
 	/* dark */
-	--color-bg-95: #353941;
+	--color-bg-95: #26282b;
 	/* dark */
-	--color-bg-100: #404552;
+	--color-bg-100: #353941;
 	/* dark */
 	--color-brand-primary-50: #557afa;
 	/*dark */
